--- a/Chart.yaml
+++ b/Chart.yaml
@@ -5,16 +5,17 @@ keywords:
 - redis
 - keyvalue
 - database
+- exporter
 version: 3.1.1
 appVersion: 5.0.3
-description: Highly available Kubernetes implementation of Redis
+description: Highly available Kubernetes implementation of Redis with exporter
 icon: https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Redis_Logo.svg/1200px-Redis_Logo.svg.png
 maintainers:
-- email: salimsalaues@gmail.com
-  name: ssalaues
+- email: jp@onlinecity.dk
+  name: Jesper Petersen
 details:
   This Helm chart provides a highly available Redis implementation with a master/slave configuration
-  and uses Sentinel sidecars for failover management
+  and uses Sentinel sidecars for failover management, with a prometheus exporter
 sources:
 - https://redis.io/download
-- https://github.com/scality/Zenko/tree/development/1.0/kubernetes/zenko/charts/redis-ha
+- https://github.com/helm/charts/tree/master/stable/redis-ha
