--- a/Chart.yaml
+++ b/Chart.yaml
@@ -12,7 +12,7 @@ description: Highly available Kubernetes implementation of Redis with exporter
 icon: https://upload.wikimedia.org/wikipedia/en/thumb/6/6b/Redis_Logo.svg/1200px-Redis_Logo.svg.png
 maintainers:
 - email: jp@onlinecity.dk
-  name: Jesper Petersen
+  name: cytram
 details:
   This Helm chart provides a highly available Redis implementation with a master/slave configuration
   and uses Sentinel sidecars for failover management, with a prometheus exporter
