Added full name back into the chart

--- a/templates/redis-auth-secret.yaml
+++ b/templates/redis-auth-secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "redis-ha.name" . }}
+  name: {{ template "redis-ha.fullname" . }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
 type: Opaque
