--- a/templates/redis-ha-service.yaml
+++ b/templates/redis-ha-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "redis-ha.name" . }}
+  name: {{ template "redis-ha.fullname" . }}
   labels:
 {{ include "labels.standard" . | indent 4 }}
   annotations:
