--- a/templates/tests/test-redis-ha-service.yaml
+++ b/templates/tests/test-redis-ha-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: {{ template "redis-ha.name" . }}-service-test
+  name: {{ template "redis-ha.fullname" . }}-service-test
   labels:
 {{ include "labels.standard" . | indent 4 }}
   annotations:
@@ -13,5 +13,5 @@ spec:
     command:
       - sh
       - -c
-      - redis-cli -h {{ template "redis-ha.name" . }} -p {{ .Values.redis.port }} info server
+      - redis-cli -h {{ template "redis-ha.fullname" . }} -p {{ .Values.redis.port }} info server
   restartPolicy: Never
